<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.getto.nicolas</groupId>
  <artifactId>de.getto.nicolas</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>de.getto.nicolas</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
    	<groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.7.0</version>
        <scope>test</scope>
    </dependency>
    <dependency>
    	<groupId>org.openjfx</groupId>
    	<artifactId>javafx-controls</artifactId>
    	<version>15.0.1</version>
  	</dependency>
  	<dependency>
    	<groupId>org.openjfx</groupId>
    	<artifactId>javafx-fxml</artifactId>
    	<version>16-ea+5</version>
	</dependency>
	<dependency>
 		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-graphics</artifactId>
  		<version>16-ea+6</version>
  		<classifier>win</classifier>
	</dependency>
  </dependencies>
  
  <build>
  	<plugins>
  		<plugin>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.8.0</version>
  			<configuration>
  				<release>14</release>
  			</configuration>
  		</plugin>
  		<plugin>
  			<groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M5</version>
  		</plugin>
  		<plugin>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-maven-plugin</artifactId>
        	<version>0.0.5</version>
        	<configuration>
        		<options>
        			<option>--add-exports</option>
        			<option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
        		</options>
            	<mainClass>de.getto.nicolas.App</mainClass>
        	</configuration>
    	</plugin>
    	<plugin>
    		<artifactId>maven-shade-plugin</artifactId>
    		<executions>
    			<execution>
    				<phase>package</phase>
    				<goals><goal>shade</goal></goals>
    				<configuration>
    					<transformers>
    						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
    							<mainClass>de.getto.nicolas.AppStarter</mainClass>
    						</transformer>
    					</transformers>
    				</configuration>
    			</execution>
    		</executions>
    	</plugin>
  	</plugins>
  </build>
</project>
